# glycosylator

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  demonstration.ipynb  glycosylator.py  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: biobuild.rst  conf.py  example_building_glycan_iupac.rst  example_building_glycan_manual.rst  example_membrane_glycosylation.rst  example_protein_glycosylation.rst  example_using_sequons.rst  glycosylator.core.rst  glycosylator.file_parsers.rst  glycosylator.glycan_representations.rst  glycosylator.optimizers.rst  glycosylator.resources.icons.rst  glycosylator.resources.names.rst  glycosylator.resources.rst  glycosylator.rst  glycosylator.utils.rst  index.rst  installation.rst  modules.rst  tutorials.rst
examples/: glycosylate_protein.ipynb
glycosylator/: __init__.py
glycosylator/core/: Glycan.py  MembraneScaffold.py  ProteinScaffold.py  __init__.py  glyco_shield.py  scaffold.py
glycosylator/optimizers/: ScaffoldRotatron.py  __init__.py  scaffold_rotatron.py  utils.py
glycosylator/resources/: defaults.py  pdbe_compounds.py  sequons.py  topology.xml
glycosylator/utils/: __init__.py  iupac.py  visual.py
src/glycosylator/: __init__.py  __old__glycosylator.py  __old__molecule_builder.py  __old__sampler.py  charmm_parameters.py  charmm_topology.py  drawer.py  glycosylator.py  molecule.py  molecule_builder.py  (+2 more)
support/: BGLN.top
tests/: base.py  test_charmm.py  test_convert.py  test_force_fields.py  test_glycan.py  test_glycosmos.py  test_graphs.py  test_iupac.py  test_molecule.py  test_optimizers.py  test_pdbe_compounds.py  test_scaffold.py  test_shield.py  test_structural.py
(+99 files in other folders)
