[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Glycosylator"
description = "Python framework for the identification, modeling, and modification of glycans in protein structure"
version = "1.0.0"
readme = "README.md"
license = {file = "LICENSE"}
# authors = []
dependencies = [
    "numpy",
    "matplotlib",
    "prody",
    "networkx",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",   
    "sphinx",
    "sphinx_rtd_theme",
]
visual = [
    "nglview",
    "ipywidgets<8.0"
]
